--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="nav">
             <h1>Header Logo</h1>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#sign-up">header link one</a></li>
+                <li><a href="#sign-up">header link two</a></li>
+                <li><a href="#sign-up">header link three</a></li>
             </ul>
         </div>
         <div class="hero">
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="content">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="illustrations">
             <div class="pic">
                 <img src="images/nature-img1.jpeg" alt="picture of landscape">
@@ -68,7 +68,7 @@
             </figcaption>
         </figure> 
     </div>
-    <div class="sign-up">
+    <div id="sign-up">
         <div class="call-to-action">
             <div class="sign-up-text">
                 <p id="sign-up-header">Call to action! It's time!</p>
